# adapt_decomp

./: CITATION.cff  README.md  environment.yml  pyproject.toml
configs/data_configs/: data_example.yml
configs/model_configs/: default_fixed.yml  default_forearm.yml  default_neuromotion.yml  default_wrist.yml  sweep_loss.yml
scripts/: run.py
src/adapt_decomp/: adaptation.py  config.py  data_structures.py  io.py  loaders.py  plots.py  preprocessing.py  utils.py
tutorials/: adaptive_emg_decomp_dyn_example.ipynb
